source/assets/css/_components.scss
// Accordion
  .accordion-header {
    @extend .padding-bottom-medium;
  }
  .accordion-content {
    @extend .padding-top-large;
  }
// Box
  .box {
    padding: $space-large $space-small;
    @media (min-width: $mq-tablet) {
      padding: $space-xl $space-xl;
    }
  }

// Buttons
  .btn {
    border-radius: 0;
    @extend .t-16;
    padding: $space-x $space-small;
  }

// Content
  .content-section {
    margin: 0 0 $space-medium 0;

    p {
      margin: 0 0 $space-small 0;
    }
  }

// Lists
  ul, ol {

  }
  .faq-list {
    @include no-list();
    margin: $space-small 0;
    @media (min-width: $mq-desktop) {
      margin-left: $space-x;
    }
  }
// Marquee
  .marquee {
    position: relative;
    width: 100vw;
    max-width: 100%;
    overflow-x: hidden;
    height: 88px;
    @media (min-width: $mq-tablet) {
      height: 200px;
    }
  }
  .marquee-content {
    position: absolute;
    white-space: nowrap;
    will-change: transform;
    animation: marquee 32s linear infinite;
    @include font-size(64);
    @media (min-width: $mq-tablet) {
      @include font-size(144);
    }
  }
  .marquee-email {
    @include font-size(24);
    color: $color-red;
    @media (min-width: $mq-tablet) {
      @include font-size(72);
    }
  }
  @keyframes marquee {
    from { transform: translateX(0); }
    to { transform: translateX(-50%); }
  }
// Nav
  .site-nav {
    @include flexbox;
    align-items: center;
    flex-wrap: wrap;
    height: 100%;
    gap: $space-medium;
    margin-top: $space-x;
    @media (min-width: $mq-tablet) {
      flex-wrap: nowrap;
      gap: $space-small;
      margin: 0;
    }
  }
  .site-nav-link {
    @extend .t-16;
    @extend .t-smallcap;
    color: $color-black;
    // opacity: 0;
    width: 100%;
    text-align: right;
    &:hover {
      color: $color-black-60;
    }
    @media (min-width: $mq-tablet) {
      text-align: left;
      width: auto;
    }
  }
// Slider
  .slider {
    margin: $space-small 0;
    overflow-x: auto;
    -webkit-overflow-scrolling: touch;
    padding: 0 $space-small 0 0;
    position: relative;
    width: 106%;
    &::-webkit-scrollbar {
      display: none;
    }
    @media (min-width: $mq-laptop) {
      margin: $space-medium 0;
      padding: 0 0 0 $space-large;
      width: 100%;
    }
  }
  .slider-track {
    display: flex;
    flex-wrap: nowrap;
    gap: $space-small;
    margin-left: 0;
    padding-right: $space-medium;
    width: calc(320px * 3);
    @media (min-width: $mq-tablet) {
      gap: $space-medium;
      margin-left: $space-medium;
      width: calc(610px * 3);
      padding-right: $space-xl;
    }
  }
  .slider-block {
    align-content: center;
    align-items: center;
    border: 1px solid $color-black;
    display: flex;
    flex-wrap: wrap;
    padding: $space-medium;
    width: 320px;
    @media (min-width: $mq-tablet) {
      padding: $space-large;
      width: 610px;
    }
  }
  .slider-block-center {
    justify-content: center;
    text-align: center;
  }
  .slider-header {
    @extend .t-14;
    @extend .t-smallcap;
  }
  .slider-content {
    @extend .t-24;
  }
  .slider-aside {
    @extend .t-18;
  }
  .slider-img {
    background: $color-black-20;
    border-radius: 150px;
    height: 150px;
    margin: 0 0 $space-medium 0;
    width: 150px;
  }
// Vectors
  .group-vector {
    align-items: flex-end;
    display: inline-flex;
    gap: $space-small;
    flex-wrap: wrap;
    margin: $space-small 0 0;
    width: 100%;
    @media (min-width: $mq-phonexl) {
      flex-wrap: wrap;
      margin: $space-medium 0;
    }
    @media (min-width: $mq-laptop) {
      flex-wrap: nowrap;
      margin: $space-medium 0;
    }
    .vector {
      align-content: center;
      align-items: center;
      border: 1px solid $color-black;
      display: flex;
      flex-wrap: wrap;
      height: 200px;
      justify-content: center;
      padding: $space-medium;
      width: 100%;
      @media (min-width: $mq-phonexl) {
        width: auto;
        flex-grow: 2; 
      }
      @media (min-width: $mq-tablet) {
        width: auto;
        flex-grow: 1; 
      }
      @media (min-width: $mq-laptop) {
        border: 0px;
        width: auto;
        height: auto;
        padding: 0;
        display: flex;
      }
    }
    .vector-img {
      display: block;
      height: 50%;
      width: 100%;
      @media (min-width: $mq-laptop) {
        height: auto;
      }
    }
    .vector-img-mobile {
      max-width: 70%;
    }
    .vector-caption {
      @extend .t-smallcap;
      @extend .t-10;
      display: inline-block;
      margin-top: $space-small;
      text-align: center;
      white-space: nowrap;
      width: 100%;
    }
  }
  .group-vector--specializations {
    // margin-top: 0;
    @media (min-width: $mq-laptop) {
      margin-top: -40px;
    }
  }

